# tbml

./: .gitignore  AGENTS.md  pyproject.toml
tbml/data/: __init__.py  tarred_images.py
tbml/experiments/bert_playground/: app.py
tbml/experiments/honeycomb/: __init__.py  dataset.py  loss.py  model.py  train.py  visualize_patches.py
tbml/experiments/honeycomb/text/: ARCHITECTURE.md  __init__.py  compare_d2v_mse.py  compare_texts.py  compare_tokenwise_mse.py  dataset.py  infer_decoder.py  infer_from_policy.py  infer_mlm.py  inference.py  model.py  plot_sequence_embeddings.py  plot_token_embeddings.py  policy_from_trajectory.py  prepare_data.py  sample_trajectory_diffusion.py  save_trajectory_from_text.py  score_suffixes.py  tlm.py  train.py  train_imdb.py  train_nli.py  train_policy.py  train_recurrent_policy.py  train_snli.py  train_trajectory_diffusion.py  train_transformer_policy.py  trajectory_embeddings.py  visualize_tokens.py
tbml/experiments/honeycomb/vision/: __init__.py  model.py  train.py  visualize_patches.py
tbml/nn/: __init__.py  adaptive_rmsnorm.py  attention.py  droppath.py  gelu.py  identity.py  init.py  linear.py  recurrent.py  rmsnorm.py  swiglu.py
tbml/optimizers/: __init__.py  muon.py
