[project]
name = "tbml"
version = "0.0.1"
description = ""
authors = []
requires-python = ">=3.11"
dependencies = [
    "equinox",
    "jax",
    "jaxtyping",
    "numpy",
    "optax",
    "pillow",
    "pydantic",
    "tensorboardX",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
]
