[project]
name = "tbml"
version = "0.0.1"
description = ""
authors = []
requires-python = ">=3.11"
dependencies = [
    "equinox",
    "huggingface-hub",
    "jax",
    "jaxtyping",
    "matplotlib",
    "numpy",
    "optax",
    "pillow",
    "pydantic",
    "tensorboardX",
    "tokenizers",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
]
