[project]
name = "tbml"
version = "0.0.1"
description = ""
authors = []
requires-python = ">=3.11"
dependencies = [
    "equinox",
    "flask",
    "huggingface-hub",
    "jax",
    "jaxtyping",
    "matplotlib",
    "numpy",
    "optax",
    "pillow",
    "pyarrow",
    "pydantic",
    "pyyaml",
    "tensorboardX",
    "tokenizers",
    "torch",
    "tqdm",
    "transformers",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
]
